# DEPRECATED_4a-hal-generic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
4a-hal/: CMakeLists.txt
4a-hal-cfg-community/: CMakeLists.txt  hal-4a-2ch-generic-usb.json  hal-4a-2ch-generic-usb.json.disabled  hal-4a-csl-cm106-8ch-usb.json  hal-4a-csl-cm106-8ch-usb.json.disabled  hal-4a-ensoniq.json  hal-4a-intel-upSquareHDMI.json  hal-4a-intel-upsquared-hdmi.json  hal-4a-intel.json  hal-4a-intel.json.disabled  hal-4a-jabra.json  hal-4a-jabra.json.disabled  hal-4a-raspberry-pi-3.json
4a-hal-cfg-reference/: CMakeLists.txt  hal-4a-2ch-generic-usb.json  hal-4a-intel-minnow-bt.json  hal-4a-intel-minnow.json  hal-4a-intel-qemu-bt.json  hal-4a-intel-qemu.json  hal-4a-intel.json  hal-4a-m3ulcbkf-radio-to-2ch.json  hal-4a-rcar-m3-bt.json  hal-4a-rcar-m3.json  hal-4a-rcar-m3kf-bt.json  hal-4a-rcar-m3kf.json
4a-hal-cfg-unicens/: CMakeLists.txt  hal-4a-unicens.json
4a-hal-references-boards-cfg/: 4a-hal-sample1.json  4a-hal-sample2.json  CMakeLists.txt  hal-4a-jon-home-usb-card.json  hal-4a-jon-office-usb-headset.json  hal-4a-sample1.json  hal-4a-sample2.json
4a-hal/4a-hal-controllers/: 4a-hal-controllers-alsacore-link.c  4a-hal-controllers-alsacore-link.h  4a-hal-controllers-api-loader.c  4a-hal-controllers-api-loader.h  4a-hal-controllers-cb.c  4a-hal-controllers-cb.h  4a-hal-controllers-mixer-handler.c  4a-hal-controllers-mixer-handler.h  4a-hal-controllers-mixer-link.c  4a-hal-controllers-mixer-link.h  4a-hal-controllers-value-handler.c  4a-hal-controllers-value-handler.h
4a-hal/4a-hal-manager/: 4a-hal-manager-cb.c  4a-hal-manager-cb.h  4a-hal-manager-events.c  4a-hal-manager-events.h  4a-hal-manager.c  4a-hal-manager.h
4a-hal/4a-hal-utilities/: 4a-hal-utilities-alsa-link.c  4a-hal-utilities-alsa-link.h  4a-hal-utilities-appfw-responses-handler.c  4a-hal-utilities-appfw-responses-handler.h  4a-hal-utilities-data.c  4a-hal-utilities-data.h  4a-hal-utilities-verbs-loader.c  4a-hal-utilities-verbs-loader.h
conf.d/cmake/: 00-debian-osconfig.cmake  00-default-osconfig.cmake  00-suse-config.cmake  config.cmake
plugins/: CMakeLists.txt
plugins/lib/: CMakeLists.txt
plugins/lib/bluetooth/: CMakeLists.txt  hal-bt-cb.c  hal-bt-cb.h  hal-bt-data.c  hal-bt-data.h  (+4 more)
plugins/lua/: CMakeLists.txt
(+16 files in other folders)
